# claude-code-connector

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  install.sh  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
demo/: README.md  requirements.txt  server.py
docs/: COMMANDS.md  FEATURE-ANALYSIS.md  NANOCLAW-REQUIREMENTS.md  ORCHESTRATOR-DEMO.md  PRD.md  TECH_DESIGN.md
examples/: basic_usage.py
py/ccc/: __init__.py
scripts/: capture-fixture.mjs  fix-shebang.mjs  parse-fixture.mjs  verify.py
src/: cli.ts  config.ts  groupchat.ts  history.ts  index.ts  parser.ts  relay.ts  session.ts  store.ts  transport.ts
src/claude_cli_connector/: __init__.py  cli.py  exceptions.py  history.py  manager.py  parser.py  relay.py  session.py  store.py  transport.py  transport_acp.py  transport_base.py  transport_sdk.py  transport_stream.py
tests/: test_parser.py
tests/e2e/: run-tests.sh  run_suite.py  run_suite.sh
tests/fixtures/001-claude-ready/: expected.json  manifest.json
tests/fixtures/001-claude-ready/frames/: 04.txt
tests/fixtures/002-claude-thinking/: expected.json  manifest.json
tests/fixtures/002-claude-thinking/frames/: 01.txt  02.txt  03.txt  04.txt  05.txt
tests/fixtures/003-claude-after-response/: expected.json  manifest.json
tests/fixtures/003-claude-after-response/frames/: 01.txt
tests/fixtures/004-claude-composed/: expected.json  manifest.json
tests/fixtures/004-claude-composed/frames/: 02.txt
tests/fixtures/005-claude-choosing/: expected.json  manifest.json
tests/fixtures/005-claude-choosing/frames/: 01.txt
tests/fixtures/006-claude-permission-allow/: expected.json  manifest.json
tests/fixtures/006-claude-permission-allow/frames/: 01.txt  03.txt
tests/fixtures/007-cursor-ready/: expected.json  manifest.json
tests/fixtures/007-cursor-ready/frames/: 04.txt
tests/fixtures/008-cursor-thinking/: expected.json  manifest.json
tests/fixtures/008-cursor-thinking/frames/: 03.txt
tests/fixtures/011-codex-ready/: expected.json  manifest.json
tests/fixtures/011-codex-ready/frames/: 02.txt
tests/fixtures/012-codex-thinking/: expected.json  manifest.json
tests/fixtures/013-codex-after-response/: expected.json  manifest.json
tests/fixtures/013-codex-after-response/frames/: 02.txt
tests/fixtures/014-codex-composed/: expected.json  manifest.json
tests/fixtures/014-codex-composed/frames/: 01.txt
tests/fixtures/015-opencode-ready/: expected.json  manifest.json
tests/fixtures/015-opencode-ready/frames/: 01.txt
tests/fixtures/016-opencode-thinking/: expected.json  manifest.json
tests/fixtures/016-opencode-thinking/frames/: 01.txt  02.txt  03.txt  04.txt
tests/fixtures/017-opencode-after-response/: expected.json  manifest.json
tests/fixtures/017-opencode-after-response/frames/: 02.txt
tests/fixtures/018-opencode-composed/: expected.json  manifest.json
tests/fixtures/018-opencode-composed/frames/: 03.txt
tests/fixtures/019-claude-long-response/: expected.json  manifest.json
tests/fixtures/019-claude-long-response/frames/: 03.txt
tests/fixtures/020-codex-trust-dialog/: expected.json  manifest.json
tests/fixtures/021-codex-working/: expected.json  manifest.json
tests/fixtures/021-codex-working/frames/: 01.txt
tests/fixtures/022-opencode-long-response/: expected.json  manifest.json
tests/integration/: conftest.py  test_real_session.py
tests/unit/: test_fixtures.py  test_history.py  test_manager.py  test_parser.py  test_relay.py  test_session.py  test_store.py  test_transport.py  test_transport_acp.py  test_transport_base.py  test_transport_sdk.py  test_transport_stream.py  test_wrapper.py
tests/unit/ts/: approve.test.ts  fixtures.ts  helpers.ts  parser.fixtures.test.ts
(+2 files in other folders)
