[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-cli-connector"
version = "0.1.0"
description = "Low-level Python connector for interacting with a running Claude Code CLI via tmux"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Lilong Qian", email = "lilong.qian@okg.com" }]

keywords = ["claude", "claude-code", "tmux", "cli", "connector", "ai"]

[project.urls]
Homepage = "https://github.com/qianyilong/claude-cli-connector"
Repository = "https://github.com/qianyilong/claude-cli-connector"
"Bug Tracker" = "https://github.com/qianyilong/claude-cli-connector/issues"

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "libtmux>=0.17.0",
  "typer>=0.12.0",
  "rich>=13.0.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-mock>=3.12",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.9",
]

[project.scripts]
ccc = "claude_cli_connector.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit"]   # default: only unit tests; use tests/integration/ with --run-integration

[tool.coverage.run]
source = ["claude_cli_connector"]
omit = ["*/cli.py"]   # CLI entry point tested separately

[tool.coverage.report]
show_missing = true
fail_under = 75
