[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccc"
version = "0.3.0"
description = "Python wrapper for the ccc CLI — manage Claude Code and Cursor sessions in tmux"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Lilong Qian", email = "lilong.qian@okg.com" }]
keywords = ["claude", "claude-code", "tmux", "cli", "ccc", "agent", "cursor"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

# No runtime dependencies — delegates everything to the ccc binary
dependencies = []

[project.urls]
Homepage = "https://github.com/qianyilong/claude-cli-connector"
Repository = "https://github.com/qianyilong/claude-cli-connector"
"Bug Tracker" = "https://github.com/qianyilong/claude-cli-connector/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-mock>=3.12",
  "ruff>=0.4",
  "mypy>=1.9",
]

[tool.setuptools.packages.find]
where = ["py"]

[tool.setuptools.package-data]
ccc = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit"]
